<resources>
    <string name="app_name">BCOIN</string>
    <string name="action_settings">Settings</string>
    <string name="str_home">首页</string>
    <string name="str_market">行情</string>
    <string name="str_comprehensive">综合</string>
    <string name="str_user">个人</string>
    <string name="str_simulate">模拟</string>
    <string name="str_login_label_email">邮箱</string>
    <string name="str_login_et_email">请输入邮箱</string>
    <string name="str_login_label_pass">密码</string>
    <string name="str_login_et_pass">请输入密码</string>
    <string name="str_login_label_phone">手机号</string>
    <string name="str_login_et_phone">请输入手机号</string>
    <string name="str_people">人</string>
    <string name="str_Introduction">简介</string>
    <string name="str_chat_room_status">聊天室状态</string>
    <string name="str_chat_room_name">聊天室名称</string>
    <string name="str_chat_room_introduce">聊天室介绍</string>
    <string name="str_chat_room_management">聊天室管理</string>
    <string name="str_chat_room_online_people">共有%1$s人</string>
    <string name="str_click_view_or_modify">点击查看或修改</string>
    <string name="str_et_new_pass">请输入新密码</string>
    <string name="str_et_new_pass_again">请再次输入新密码</string>
    <string name="str_et_new_pass_error">两次输入密码不一致</string>
    <string name="str_registered">注册</string>
    <string name="str_login">登录</string>
    <string name="str_consent">同意</string>
    <string name="str_forget_pass">忘记密码?</string>
    <string name="str_code_not_received">收不到验证码?</string>
    <string name="str_agreement">用户协议</string>
    <string name="str_label_agreement">注册即表示同意</string>
    <string name="str_resend">重新发送</string>
    <string name="str_seconds_resend">重新发送</string>
    <string name="str_nologin">点击登录</string>
    <string name="str_warning_islogout">确定退出登陆吗?</string>
    <string name="str_warning_issave">确认保存吗?</string>
    <string name="str_warning_no_my_group">你没有聊天室</string>
    <string name="str_toast_group_name">请输入组合名称</string>
    <string name="str_toast_group_introduction">请输入组合简介</string>
    <string name="str_toast_team_introduction">请输入战队简介</string>
    <string name="str_toast_group_type">请选择组合类型</string>
    <string name="str_toast_input_num">请输入数量</string>
    <string name="str_toast_input_reason">一句话简单描述</string>
    <string name="str_toast_input_price">请输入价格</string>
    <string name="str_toast_select_history">请选择分享内容</string>
    <string name="str_toast_input_nike_name">请输入昵称</string>
    <string name="str_toast_input_group_name">聊天室名称不能为空</string>
    <string name="str_toast_introduction">请输入简介</string>
    <string name="str_toast_input_invite_code">在此输入邀请码</string>
    <string name="str_toast_need_invite_code">请输入邀请码</string>
    <string name="str_toast_please_input">请输入</string>
    <string name="str_toast_no_change">请修改后再保存</string>
    <string name="str_toast_no_select_coin">当前没有选择币种</string>
    <string name="str_toast_cannot_talk">您的积分不够,不能够发言</string>
    <string name="str_toast_close_chat">聊天室已关闭,不能够发言</string>
    <string name="str_toast_cannot_join_group">温馨提示,您不能够加入该聊天室</string>
    <string name="str_toast_no_kline">温馨提示: 数据维护中,该币种k线将在近期更新,敬请期待</string>
    <string name="str_now_no_data">暂无</string>
    <string name="str_look_detail">查看详情 >></string>
    <string name="str_detail">详情 >></string>
    <string name="str_details">详情</string>
    <string name="str_fans">粉丝</string>
    <string name="str_focuse">关注</string>
    <string name="str_high_quality">优质</string>
    <string name="str_free_subscription">免费订阅</string>
    <string name="str_my_subscribe_management">我的订阅管理</string>
    <string name="str_gallery">图库</string>
    <string name="str_management">管理</string>
    <string name="str_new">新</string>
    <string name="str_complete">完成</string>
    <string name="str_next_step">下一步</string>
    <string name="str_please_enter">请输入</string>
    <string name="str_set_password">请设置6-20位密码</string>
    <string name="str_send_code_toast">验证码已发送至注册(%1$s),请查收 </string>
    <string name="str_look_more_msg">点击查看全部(%1$s)115条回复 </string>
    <string name="str_look_more">点击查看全部 </string>
    <string name="str_comprehensive_msg">综合信息</string>
    <string name="str_information">资讯</string>
    <string name="str_advance_warning">预警</string>
    <string name="str_currency_data">币种资料</string>
    <string name="str_global_market">全球行情</string>
    <string name="str_discuss">讨论</string>
    <string name="str_total">量\u3000</string>
    <string name="str_cost">费\u3000</string>
    <string name="str_buy_in">买入</string>
    <string name="str_buy_in_short">买入平空</string>
    <string name="str_buy">买</string>
    <string name="str_highest">高</string>
    <string name="str_opening_quotation">开盘</string>
    <string name="str_sell_out">卖出</string>
    <string name="str_sell_out_short">卖出开空</string>
    <string name="str_sell">卖</string>
    <string name="str_minimum">低</string>
    <string name="str_closing_quotation">收盘</string>
    <string name="str_add">添加</string>
    <string name="str_coin_index">币种指数</string>
    <string name="str_name_of_the">名称</string>
    <string name="str_latest_price">最新价</string>
    <string name="str_volume">24H量</string>
    <string name="str_rise_ranking">涨幅榜</string>
    <string name="str_rise_24h">24H涨幅</string>
    <string name="str_rise">涨幅</string>
    <string name="str_amplitude">震幅</string>
    <string name="str_drop_ranking">跌幅榜</string>
    <string name="str_no_binding">去绑定</string>
    <string name="str_binding">已绑定</string>
    <string name="str_look_all">查看全部</string>
    <string name="str_title_findpassword">找回密码</string>
    <string name="str_title_setpasswordagain">重置密码</string>
    <string name="str_title_registeredvalidation">注册验证</string>
    <string name="str_title_market">币价行情</string>
    <string name="str_title_coin_circle_index">币圈指数</string>
    <string name="str_title_user">个人中心</string>
    <string name="str_title_user_info">个人资料</string>
    <string name="wan_unit">万手</string>
    <string name="yi_unit">亿手</string>
    <string name="str_red_sticker">红涨绿跌</string>
    <string name="str_synchronous_group">将操作同步到我的小密圈</string>
    <string name="str_night_model">夜间模式</string>
    <string name="str_rank">排名</string>
    <string name="str_price_model">默认显示价格</string>
    <string name="str_customer_service">在线客服</string>
    <string name="str_management_accounts">管理账户</string>
    <string name="str_my_fans">我的粉丝</string>
    <string name="str_my_home_page">我的主页</string>
    <string name="str_user_home_page">我的个人主页</string>
    <string name="str_other_home_page">他的主页</string>
    <string name="str_my_focuse_people">我关注的人</string>
    <string name="str_change_header">点击头像更换</string>
    <string name="str_nike_name">昵称</string>
    <string name="str_recommended">推荐给朋友</string>
    <string name="str_language">语言切换</string>
    <string name="str_security">安全中心</string>
    <string name="str_setting">设置</string>
    <string name="str_setting_center">设置中心</string>
    <string name="str_kline_setting">行情显示设置</string>
    <string name="str_other_setting">其它设置</string>
    <string name="str_logout">退出登录</string>
    <string name="str_about_us">关于我们</string>
    <string name="str_custom_rate">自定义汇率</string>
    <string name="str_set_custom_rate">汇率设置</string>
    <string name="str_clean_cache">清理缓存</string>
    <string name="str_default_unit">默认价格显示</string>
    <string name="str_change_language">切换语言</string>
    <string name="str_change_password">修改密码</string>
    <string name="str_global_index">全球指数</string>
    <string name="str_add_coin_market">添加自选</string>
    <string name="str_list_sorting">列表排序</string>
    <string name="str_change_coin_market">币行情自选</string>
    <string name="str_search_coin_market">币行情搜索</string>
    <string name="str_look_team_home_page">查看战队主页>></string>
    <string name="str_search_coin_market_hint">搜索平台、币种</string>
    <string name="str_search_history">搜索历史</string>
    <string name="str_search">搜索</string>
    <string name="str_hot_coin">热门币种</string>
    <string name="str_clean">清空</string>
    <string name="str_circulation">流通</string>
    <string name="str_circulation_amount">流通量</string>
    <string name="str_total_amount">总量</string>
    <string name="str_ico_time">ICO时间</string>
    <string name="str_ico_cost">ICO成本</string>
    <string name="str_development_people">研发者</string>
    <string name="str_browser">区块浏览器</string>
    <string name="str_website">官网</string>
    <string name="str_wallet_address">钱包地址</string>
    <string name="str_srot_toast">取消请点击星星,排序请长按拖动</string>
    <string name="str_is_clean_cache">是否清理缓存?</string>
    <string name="str_select_complete">选好了</string>
    <string name="str_online_people">人在线</string>
    <string name="str_time">时间</string>
    <string name="str_language_zhcn">简体中文</string>
    <string name="str_market_value">市值</string>
    <string name="str_global_network">全网</string>
    <string name="str_chart_nodata">数据加载中...</string>
    <string name="str_kline_nodata">暂无数据</string>
    <string name="str_amount">量</string>
    <string name="str_buy_one">买一</string>
    <string name="str_sell_one">卖一</string>
    <string name="str_kvolume">量</string>
    <string name="str_no_choose">请选择后再提交</string>
    <string name="str_currency">币种</string>
    <string name="str_type">类型</string>
    <string name="str_state">状态</string>
    <string name="str_entrust_price">委托价格</string>
    <string name="str_storage_quantity">持仓量</string>
    <string name="str_storage_quantity_scale">持仓量(比例)</string>
    <string name="str_show_time">挂单时间</string>
    <string name="str_storage_price">持仓价</string>
    <string name="str_position_storage_price">持仓价格</string>
    <string name="str_now_price">当前价格</string>
    <string name="str_earnings_ratio">收益率</string>
    <string name="str_today_earnings">今日收益</string>
    <string name="str_daily_operation">日均操作</string>
    <string name="str_number">次</string>
    <string name="str_num">次</string>
    <string name="str_cumulative_earnings">累计收益</string>
    <string name="str_yesterday_earnings">昨日收益</string>
    <string name="str_week_earnings">周收益</string>
    <string name="str_last_week_earnings">上周收益</string>
    <string name="str_month_earnings">月收益</string>
    <string name="str_last_month_earnings">上月收益</string>
    <string name="str_earnings_chart">收益走势</string>
    <string name="str_after_payment">付费后可见</string>
    <string name="str_simulation">模拟交易</string>
    <string name="str_default">默认</string>
    <string name="str_edit_introduction">编辑组合简介</string>
    <string name="str_edit_abstract">编辑简介</string>
    <string name="str_edit_team_introduction">编辑战队简介</string>
    <string name="str_change_introduction">修改简介</string>
    <string name="str_title_share_history">请选择需要分享的内容</string>
    <string name="str_competition_group">模拟组合大赛即将开启\n敬请期待</string>
    <string name="str_tv_deal">立即交易</string>
    <string name="str_tv_add_percent">累计收益</string>
    <string name="str_tv_today_percent">今日收益</string>
    <string name="str_tv_info">查看</string>
    <string name="str_tv_group_name">组合名称</string>
    <string name="str_tv_team_name">战队名称</string>
    <string name="str_et_group_title">数字/字母/中文组成，不超过12个字符</string>
    <string name="str_tv_group_info">组合简介</string>
    <string name="str_tv_team_info">战队简介</string>
    <string name="str_et_group_info">简单介绍下你的组合</string>
    <string name="str_tv_type">类型</string>
    <string name="str_tv_currency">币种</string>
    <string name="str_tv_state">状态</string>
    <string name="str_tv_entrust_prase">委托价格</string>
    <string name="str_tv_num">数量</string>
    <string name="str_tv_operation">操作</string>
    <string name="str_deal_time">成交时间</string>
    <string name="str_hold_proportion_change">持仓比例变化</string>
    <string name="str_crete_hint">创建成功后不可更改圈子属性</string>
    <string name="str_ck_free">免费</string>
    <string name="str_ck_charge">收费</string>
    <string name="str_ck_agree">我已阅读并同意</string>
    <string name="str_tv_rule">《圈主规则》</string>
    <string name="str_tv_next">下一步</string>
</resources>