<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/text_trans_80px"
    android:gravity="center"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/tv_type"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/str_tv_type"
        android:textColor="@color/color_font4"
        android:textSize="@dimen/trans_24px" />

    <TextView
        android:id="@+id/tv_currency"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/str_tv_currency"
        android:textColor="@color/color_font4"
        android:textSize="@dimen/trans_24px" />

    <TextView
        android:id="@+id/tv_state"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/str_tv_state"
        android:textColor="@color/color_font4"
        android:textSize="@dimen/trans_24px" />

    <TextView
        android:id="@+id/tv_entrust_prase"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="center"
        android:text="@string/str_tv_entrust_prase"
        android:textColor="@color/color_font4"
        android:textSize="@dimen/trans_24px" />

    <TextView
        android:id="@+id/tv_num"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/str_tv_num"
        android:textColor="@color/color_font4"
        android:textSize="@dimen/trans_24px" />

    <TextView
        android:id="@+id/tv_operation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/str_tv_operation"
        android:textColor="@color/color_font4"
        android:textSize="@dimen/trans_24px" />


</LinearLayout>
