<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="horizontal"
    android:padding="@dimen/trans_20px">

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/trans_20px"
        android:text="@string/str_currency"
        android:textColor="@color/color_font3"
        android:textSize="@dimen/text_trans_24px" />

    <Space
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/tv_position_scale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_storage_quantity_scale"
        android:textColor="@color/color_font3"
        android:textSize="@dimen/text_trans_24px" />

    <Space
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1" />


    <TextView
        android:id="@+id/tv_position_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_position_storage_price"
        android:textColor="@color/color_font3"
        android:textSize="@dimen/text_trans_24px" />

    <Space
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/tv_now_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_now_price"
        android:textColor="@color/color_font3"
        android:textSize="@dimen/text_trans_24px" />

    <Space
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1" />


    <TextView
        android:id="@+id/tv_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/trans_20px"
        android:text="@string/str_earnings_ratio"
        android:textColor="@color/color_font3"
        android:textSize="@dimen/text_trans_24px" />


</LinearLayout>
