<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/trans_70px"
        android:background="@color/base_mask"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        >

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="48"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/str_currency"
            android:textColor="@color/color_font3"
            android:textSize="@dimen/text_trans_24px"/>

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="78"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/str_storage_quantity"
            android:textColor="@color/color_font3"
            android:textSize="@dimen/text_trans_24px"/>

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="120"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/str_storage_price"
            android:textColor="@color/color_font3"
            android:textSize="@dimen/text_trans_24px"/>

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="74"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/str_now_price"
            android:textColor="@color/color_font3"
            android:textSize="@dimen/text_trans_24px"/>

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="40"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/str_earnings_ratio"
            android:textColor="@color/color_font3"
            android:textSize="@dimen/text_trans_24px"/>

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="33"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>